# nexus

./: .gitignore  build.zig  pyproject.toml  redeploy.sh  tool_executor_tool_mcp_server.py
src/: agent.zig  db.zig  gemini.zig  main.zig  test_client.zig  tools.zig
src/core/: scanner.zig
