# DO EVERYTHING WITH LOVE, CARE, HONESTY, TRUTH, TRUST, KINDNESS, RELIABILITY, CONSISTENCY, DISCIPLINE, RESILIENCE, CRAFTSMANSHIP, HUMILITY, ALLIANCE, EXPLICITNESS

[project]
name = "tool-executor-mcp"
version = "0.1.0"
description = "High-Integrity Tool Executor MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "trafilatura",
    "beautifulsoup4",
]

[project.scripts]
tool-executor-mcp = "tool_executor_tool_mcp_server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "tool_executor_tool_mcp_server.py",
]
